<?xml version="1.0"?>
<package format="2">
  <name>voice_playback</name>
  <version>0.0.1</version>
  <description>ROS package for voice playback in competition, plays WAV files based on ROS topics</description>
  <!-- 已填入你的信息 -->
  <maintainer email="2537570133@qq.com">王家祺</maintainer>
  <license>Apache License 2.0</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 构建依赖 -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <!-- 运行依赖 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>alsa-utils</exec_depend>  <!-- Ubuntu音频播放依赖 -->

  <export>
    <catkin />
  </export>
</package>
